# aiorpc

./: .gitignore  Dockerfile  Makefile  README.rst  make_arch.sh  pylint.rc  requirements.txt  setup.cfg  unpack.sh
aiorpc/: __init__.py  __main__.py  aiohttp_transport.py  apis.py  client.py  client_base.py  common.py  interfaces.py  plugins_api.py  proxy.py  rpc.py  server.py  service.py
aiorpc/plugins/: __init__.py  ceph.py  cli.py  fs.py  old_sensors_plugin.py  system.py
aiorpc_service_files/: aiorpc.service  config.cfg  log_config.json
tests/: api.key  api_key.enc  historic_dump.json  ssl.crt  ssl.key  test_historic.py  test_rpc.py  test_serialization.py
