[metadata]
name = aiorpc
version = 1.0
author = Kostiantyn Danylov
author-email = koder.mail@gmail.com
home-page = https://github.com/koder-ua/aiorpc
description = file: README.rst
license = Apache 2.0
platform = any
keywords = asyncio rpc
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = agent
test_suite = tests
setup_requires =
    setuptools>=38.3.0
    wheel
install_requires =
    aiohttp>3.0,<4.0
    koder_utils
    cephlib
tests_require = pytest

[bdist_wheel]
universal = true


[sdist]
formats = gztar

